compiler/zrc_codegen/src/snapshots/zrc_codegen__program__tests__function_parameters_are_properly_generated.snap
---
source: compiler/zrc_codegen/src/program.rs
description: "fn id(x: i32) -> i32 {\n    return x;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define i32 @id(i32 %0) !dbg !3 {
entry:
  %arg_x = alloca i32, align 4, !dbg !9
  store i32 %0, ptr %arg_x, align 4, !dbg !9
    #dbg_declare(ptr %arg_x, !8, !DIExpression(), !11)
  %load = load i32, ptr %arg_x, align 4, !dbg !12
  ret i32 %load, !dbg !12
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "id", linkageName: "id", scope: null, file: !2, line: 1, type: !4, scopeLine: 1, spFlags: DISPFlagDefinition, unit: !1, retainedNodes: !7)
!4 = !DISubroutineType(types: !5)
!5 = !{!6, !6}
!6 = !DIBasicType(name: "i32")
!7 = !{!8}
!8 = !DILocalVariable(name: "x", scope: !3, file: !2, line: 1, type: !6)
!9 = !DILocation(line: 1, column: 22, scope: !10)
!10 = distinct !DILexicalBlock(scope: !3, file: !2, line: 1, column: 22)
!11 = !DILocation(line: 1, column: 7, scope: !10)
!12 = !DILocation(line: 2, column: 12, scope: !13)
!13 = distinct !DILexicalBlock(scope: !10, file: !2, line: 1, column: 22)
