compiler/zrc_codegen/src/snapshots/zrc_codegen__program__tests__global_string_variable_compiles.snap
---
source: compiler/zrc_codegen/src/program.rs
description: "let x = \"hello\";\nlet y = \"world\";\n\nfn main() -> i32 {\n    return 0;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

@x = global ptr @.str
@.str = constant [5 x i8] c"hello"
@y = global ptr @.str.1
@.str.1 = constant [5 x i8] c"world"

define i32 @main() !dbg !3 {
entry:
  ret i32 0, !dbg !7
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "main", linkageName: "main", scope: null, file: !2, line: 4, type: !4, scopeLine: 4, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32")
!7 = !DILocation(line: 5, column: 12, scope: !8)
!8 = distinct !DILexicalBlock(scope: !9, file: !2, line: 4, column: 18)
!9 = distinct !DILexicalBlock(scope: !3, file: !2, line: 4, column: 18)
