compiler/zrc_codegen/src/snapshots/zrc_codegen__program__tests__two_pass_generation_works.snap
---
source: compiler/zrc_codegen/src/program.rs
description: "fn bar() -> i32 {\n\treturn foo();\n}\n\nfn foo() -> i32 {\n\treturn 42;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define i32 @bar() !dbg !3 {
entry:
  %call = call i32 @foo(), !dbg !7
  ret i32 %call, !dbg !7
}

define i32 @foo() !dbg !10 {
entry:
  ret i32 42, !dbg !11
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "bar", linkageName: "bar", scope: null, file: !2, line: 1, type: !4, scopeLine: 1, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32")
!7 = !DILocation(line: 2, column: 9, scope: !8)
!8 = distinct !DILexicalBlock(scope: !9, file: !2, line: 1, column: 17)
!9 = distinct !DILexicalBlock(scope: !3, file: !2, line: 1, column: 17)
!10 = distinct !DISubprogram(name: "foo", linkageName: "foo", scope: null, file: !2, line: 5, type: !4, scopeLine: 5, spFlags: DISPFlagDefinition, unit: !1)
!11 = !DILocation(line: 6, column: 9, scope: !12)
!12 = distinct !DILexicalBlock(scope: !13, file: !2, line: 5, column: 17)
!13 = distinct !DILexicalBlock(scope: !10, file: !2, line: 5, column: 17)
